Fix Google Charts tooltip flickering

--- a/singularIT/assets/scss/_custom.scss
+++ b/singularIT/assets/scss/_custom.scss
@@ -334,3 +334,9 @@ table tr td:nth-child(4) {
     max-width: 100%;
   }
 }
+
+
+/* Fixes Google Charts tooltip flickering */
+svg > g > g:last-child {
+  pointer-events: none
+}
